# applybot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sesskey  DEPLOY.md  Dockerfile  README.md  STATUS.md  alembic.ini  core_idea.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/agents/: coder.agent.md  lead.agent.md
.github/instructions/: project-structure.instructions.md
.github/skills/commit/: SKILL.md
.github/workflows/: docker.yml  terraform.yml
alembic/: env.py
alembic/versions/: 129232607545_initial_schema.py
data/: applybot.db
infra/: artifact_registry.tf  cloud_functions.tf  cloud_run.tf  cloud_sql.tf  firestore.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
src/applybot/: __init__.py  __main__.py  cli.py  config.py  storage.py
src/applybot/application/: README.md  preparer.py  question_answerer.py  resume_tailor.py
src/applybot/dashboard/: README.md  api.py  components.py  frontend.py  theme.py
src/applybot/dashboard/pages/: apps.py  jobs.py  overview.py  profile.py
src/applybot/discovery/: README.md  deduplicator.py  enricher.py  orchestrator.py  query_builder.py  ranker.py
src/applybot/discovery/scrapers/: base.py  euremotejobs.py  greenhouse.py  lever.py  serpapi.py
src/applybot/discovery/tests/: conftest.py  test_deduplicator.py  test_orchestrator.py  test_query_builder.py  test_ranker.py  test_scrapers.py
src/applybot/llm/: README.md  client.py
src/applybot/models/: README.md  __init__.py  application.py  base.py  job.py  profile.py
src/applybot/profile/: README.md  enrichment.py  manager.py  resume.py
src/applybot/tracking/: README.md  gmail.py  tracker.py
tests/: conftest.py  test_discovery.py  test_models.py  test_resume.py  test_tracking.py
