[project]
name = "applybot"
version = "0.1.0"
description = "AI-powered job application automation"
requires-python = ">=3.12"
dependencies = [
    "anthropic[vertex]>=0.40.0",
    "uvicorn>=0.32.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "httpx>=0.28.0",
    "lxml>=5.0.0",
    "cssselect>=1.2.0",
    "rapidfuzz>=3.10.0",
    "python-fasthtml>=0.12.0",
    "itsdangerous>=2.0.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
applybot = "applybot.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["tests.*", "applybot.discovery.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"

[tool.black]
target-version = ["py312"]
line-length = 88
